@@ -3,8 +3,9 @@ gcl (2.6.1-40) unstable; urgency=low
   * gcc-3.4 support
   * Proper isnormal default courtesy of Magnus Henoch
   * gclclean makefile target and other small makefile changes
+  * Proper check for C stack array body address in gbc.c and sgbc.c
 
- -- Camm Maguire <camm@enhanced.com>  Wed, 26 May 2004 02:21:51 +0000
+ -- Camm Maguire <camm@enhanced.com>  Wed, 26 May 2004 02:26:01 +0000
 
 gcl (2.6.1-39) unstable; urgency=high
 
